<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Strumline</string>
    <string name="action_settings">Settings</string>

    <string name="btn_song_select">Select Audio File...</string>
    <string name="btn_set_loop_start">Set Current Position as Loop Start</string>
    <string name="btn_set_loop_stop">Set Current Position as Loop Stop</string>
    <string name="txtView_cur_position">Current Position</string>
    <string name="txtView_loop_start">Loop Start</string>
    <string name="txtView_loop_stop">Loop Stop</string>

</resources>
