<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.github.itsmichaelwang.strumline.app.MainActivity"
    android:id="@+id/rl1">

    TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_song_select"
        android:id="@+id/btn_song_select"
        android:layout_marginTop="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_loop_start"
        android:id="@+id/btn_set_loop_start"
        android:layout_below="@+id/txt_loop_stop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_loop_stop"
        android:id="@+id/btn_set_loop_stop"
        android:layout_below="@+id/btn_set_loop_start"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btn_set_loop_start"
        android:layout_alignEnd="@+id/btn_set_loop_start"
        android:visibility="gone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_cur_pos"
        android:layout_below="@+id/btn_song_select"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/txtView_loop_start"
        android:visibility="gone"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txt_loop_start"
        android:layout_below="@+id/txt_cur_pos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txt_loop_stop"
        android:layout_below="@+id/txt_loop_start"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtView_cur_position"
        android:id="@+id/txtView_cur_position"
        android:layout_above="@+id/txt_loop_start"
        android:layout_toRightOf="@+id/txt_loop_start"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtView_loop_start"
        android:id="@+id/txtView_loop_start"
        android:layout_above="@+id/txt_loop_stop"
        android:layout_toRightOf="@+id/txt_loop_start"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtView_loop_stop"
        android:id="@+id/txtView_loop_stop"
        android:layout_alignBottom="@+id/txt_loop_stop"
        android:layout_toRightOf="@+id/txt_loop_stop"
        android:visibility="gone" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_play_pause"
        android:layout_alignTop="@+id/btn_song_select"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"
        android:text="Pause" />

</RelativeLayout>
